fix: adjust gap size in GameCard action menu for better spacing

--- a/src/components/elements/GameCard/CardView/CardView.scss
+++ b/src/components/elements/GameCard/CardView/CardView.scss
@@ -65,7 +65,7 @@
 					&:nth-child(2) {
 						background-color: var(--surface-light);
 						color: white;
-						gap: 5px;
+						gap: 3px;
 					}
 				}
 			}
